Fixed overlapping messages bug + best comando

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,7 +92,9 @@ ul {
 /* Messages */
 
 .message {
-  height: 50px;
+  height: auto;
+  position: relative;
+  display: list-item;
 }
 .chatArea {
   height: 100%;
